# pylira_simd

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pyproject.toml  setup.py
.github/workflows/: conda.yml  pip.yml  wheels.yml
conda.recipe/: meta.yaml
src/: main.cpp
src/lira_pyb/: lira_simd_pyb.cpp
src/pylira_simd/: __init__.py  _data.py  _describe_payload.py  _lira_payload.py
src/pylira_simd/sample_data/: img_64x64.fits  null_q1_c1.fits  psf_33x33.fits
tests/: test_basic.py
