[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "pybind11>=2.8.0",
    "cmake>=3.21",
    "scikit-build>=0.12",
]

build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths=[
    "tests"
]

[tool.cibuildwheel]
manylinux-x86_64_image = "manylinux2_24"
manylinux-i686-image = "manylinux2_24"
manylinux-pypy_x86_64-image = "manylinux2_24"
manylinux-pypy_i686-image = "manylinux2_24"

[tool.cibuildwheel.linux]
before-all = [
    "apt-get install -y libtbb-dev r-base-dev r-base r-base-core electric-fence r-mathlib"
    ]
