[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "pybind11>=2.8.0",
    "cmake>=3.21",
    "scikit-build>=0.12",
    "astropy>4.0",
    "numpy>=1.21",
    "autoclass>=1.0.0",
    "tabulate>=0.8"
]

build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths=[
    "tests"
]
